--- a/index.html
+++ b/index.html
@@ -2,13 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Midori Kocak</title>
+    <title>Kaan Baytar</title>
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+    <style>
+        body {
+            background-color: #ffffe6;
+            margin:0 auto;
+            max-width: 30em;
+            font-family: "Times New Roman", "arial", sans-serif;
+            line-height: 1.5;
+            padding: 4em 1em;
+            color: #555;
+        }
+        h2 {
+            margin-top: 1em;
+            padding-top: 1em;
+        }
+
+        h1, h2, strong{
+            color: #333;
+        }
+    </style>
 </head>
 <body>
 <header>
-    <h1>Midori Kocak</h1>
-    <img src="img/image.png" width="150" alt="Midori Kocak"/>
+    <h1>Kaan Baytar</h1> 
+    <img src="img/ves.jpg" width="140" alt="Kaan Baytar"/>
     <nav>
         <ul>
             <li><a href="#summary">Summary</a></li>
@@ -26,33 +45,31 @@
                 Summary
             </h2>
             <p>
-                A <b>software engineer</b> with 10+ years experience in <i>web development</i> who loves to share her knowledge with people.
+                An <b>energy systems and calibration engineer</b> with 2+ years experience in <i>energy and electrical calibration</i> who loves to share her knowledge with people.
             </p>
         </section>
         <section id="work">
             <h2>Work</h2>
             <ul>
                 <li>
-                    <strong >McKinsey &amp; Company</strong><br>
-                    <a href="http://mckinsey.com" itemprop="url">mckinsey.com</a><br>
-                    <small>Senior Software Engineer</small>
+                    <strong >TestOne Technology Solution</strong><br>
+                    <a href="www.testone.com.tr" itemprop="url">Testone</a><br>
+                    <small>Calibration Engineer and Quality, Control Specialist </small>
                     <br>
-                    March 2018 - Present<br>
+                    November 2016 - January 2018<br>
                 </li>
 
                 <li>
-                    <strong >Freelancer</strong><br>
-                    <a href="http://github.com/midorikocak" itemprop="url">github.com/midorikocak</a><br>
-                    <small>Software Engineer</small>
+                    <strong >Streetdust (Start-up Company)</strong><br>
+                    <small>Manager</small>
                     <br>
-                    September 2016 - February 2018<br>
+                    January 2015 - August 2015<br>
                 </li>
                 <li>
-                    <strong >Massive Interactive</strong><br>
-                    <a href="http://massive.co" itemprop="url">massive.co</a><br>
-                    <small>Frontend Engineer</small>
+                    <strong >Istanbul Bilgi University</strong><br>
+                    <small>Manager Asistant</small>
                     <br>
-                    August 2015 - August 2016<br>
+                    October 2014 - August 2015<br>
                 </li>
             </ul>
         </section>
@@ -60,11 +77,18 @@
             <h2>Education</h2>
             <ul>
                 <li>
-                    <strong >Sabanci University</strong><br>
-                    <a href="http://sabanciuniv.edu" itemprop="url">sabanciuniv.edu</a><br>
-                    <small>Computer Science & Engineering</small>
+                    <strong>Southern States University</strong><br>
+                    <a href="https://www.ssu.edu/" itempromp="url">SSU</a><br>
+                    <small>Master of Business Administration</small>
                     <br>
-                    2006 - 2010<br>
+                    2018-Present<br>
+
+                <li>
+                    <strong >Istanbul Bilgi University</strong><br>
+                    <a href="https://www.bilgi.edu.tr" itemprop="url">Istanbul Bilgi University</a><br>
+                    <small>Energy Systems Engineering</small>
+                    <br>
+                    2011 - 2016<br>
                 </li>
             </ul>
         </section>
@@ -77,28 +101,16 @@
                 <li>
                     English - Fluent
                 </li>
-                <li>
-                    Italian - Fluent
-                </li>
-                <li>
-                    Czech - Intermediate
-                </li>
-                <li>
-                    Japanese - Beginner
-                </li>
             </ul>
         </section>
         <section id="skills">
             <h2>Skills</h2>
             <ol>
                 <li>
-                    PHP / MySQL
+                    Photoshop-Indesign-Illustrator
                 </li>
                 <li>
-                    HTML / CSS
-                </li>
-                <li>
-                    JavaScript (React / Vue / Elm)
+                    HTML / Java / Pyhton *Beginner
                 </li>
             </ol>
         </section>
@@ -108,14 +120,14 @@
     <h2>Social</h2>
     <nav>
         <ul>
-            <li><a href="http://linkedin.com/in/midorikocak">Linkedin</a></li>
+            <li><a href="http://linkedin.com/in/kaanbaytar">Linkedin</a></li>
         </ul>
     </nav>
     <section id="contact">
         <h2>Contact</h2>
         <ul>
             <li>
-                <a href="mailto:mtkocak@gmail.com">E-mail</a>
+                <a href="mailto:">E-mail</a>
             </li>
         </ul>
     </section>
